# PubMedSearcher

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
src/: args.py  core.py  main.py  mesh.py  path.py  term.py  ui.py
src/json/: dict.json  parser.json
src/scm/: dict.scm  parser.scm
tests/: term_test.py
