[project]
name = "PubMedSearcher"
version = "1.0.0"
description = "Save information of pubmed articles as a JSON file."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymed>=0.8.9",
]

[build-system]
requires = ['setuptools']

[project.scripts]
dump-articles = "main:main"

[tool.setuptools]
py-modules = ['main', 'args', 'core', 'path', 'term']
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]