[project]
name = "PubMedSearcher"
version = "2.0.1"
description = "Save information of pubmed articles as a JSON file."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymed>=0.8.9",
    "pytest>=8.4.1",
]

[build-system]
requires = ['setuptools']

[project.scripts]
dump-articles = "main:main"

[tool.setuptools]
py-modules = ['main', 'args', 'core', 'path', 'term']
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"