[project]
name = "PubMedSearcher"
version = "7.1.0"
description = "Save information of pubmed articles as a JSON file."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "npyscreen>=4.10.5",
    "pymed>=0.8.9",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[build-system]
requires = ['setuptools']

[project.scripts]
dump-articles = "main:main"

[tool.setuptools]
py-modules = ['main', 'args', 'core', 'path', 'term', 'ui', 'mesh']
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"
